--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ processResources {
     }
 }
 
+repositories {
+   flatDir {
+       dirs 'lib'
+   }
+}
+
 dependencies {
     compile fileTree(dir: 'lib', include: '*.jar')
 }
